Java language level migrations