@@ -1,7 +1,6 @@
 package edu.kis.powp.jobs2d.drivers;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import edu.kis.powp.jobs2d.command.DriverCommand;
@@ -50,7 +49,7 @@ public class RecordingDriver implements VisitableDriver {
     }
 
     public synchronized List<DriverCommand> getRecordedCommands() {
-        return Collections.unmodifiableList(new ArrayList<>(recorded));
+        return List.copyOf(recorded);
     }
 
     @Override
